# cirradio

./: .gitignore  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/plans/: 2026-03-02-cirradio-design.md  2026-03-02-phase1-implementation.md  2026-03-03-dev-board-design.md  2026-03-03-kicad-implementation.md
firmware/device-tree/: pl.dtsi  system-user.dtsi
firmware/petalinux/meta-cirradio/conf/: layer.conf
firmware/petalinux/meta-cirradio/recipes-cirradio/cirradio/: cirradio.service  cirradio_1.0.bb
firmware/petalinux/meta-cirradio/recipes-security/cirradio-seccomp/: cirradio-seccomp_1.0.bb
firmware/petalinux/meta-cirradio/recipes-security/cirradio-seccomp/files/: cirradio.seccomp
firmware/petalinux/meta-cirradio/recipes-security/dm-verity-rootfs/: dm-verity-rootfs_1.0.bb
firmware/petalinux/meta-cirradio/recipes-security/ima-policy/: ima-policy_1.0.bb
firmware/petalinux/meta-cirradio/recipes-security/ima-policy/files/: ima-policy.conf
fpga/: README.md
fpga/constraints/: pinout.xdc  timing.xdc
fpga/scripts/: check_regmap.py  create_project.tcl  gen_test_vectors.py  run_sim.tcl  test_vectors.json
fpga/sim/: ad9361_if_tb.sv  axi_regs_tb.sv  channelizer_tb.sv  cirradio_bd_tb.sv  fhss_engine_tb.sv  modem_tb.sv  sim_helpers.svh  tdma_mac_tb.sv
fpga/src/ad9361_if/: ad9361_if.sv
fpga/src/axi_regs/: axi_regs.sv  regs.svh
fpga/src/channelizer/: channelizer.sv
fpga/src/fhss_engine/: fhss_engine.sv
fpga/src/modem/: modem.sv
fpga/src/tdma_mac/: tdma_mac.sv
hardware/: .gitignore  README.md
hardware/cirradio-devboard/: ad9361.kicad_sch  cirradio-devboard.kicad_pcb  cirradio-devboard.kicad_pro  cirradio-devboard.kicad_sch  connectors.kicad_sch  ddr3l.kicad_sch  gen_ad9361.py  gen_connectors.py  gen_ddr3l.py  gen_pcb_drc.py  gen_pcb_netlist.py  gen_pcb_placement.py  gen_pcb_planes.py  gen_pcb_routing.py  gen_peripherals.py  gen_rf.py  gen_toplevel.py  gen_zynq.py  peripherals.kicad_sch  power.kicad_sch  rf-frontend.kicad_sch  zynq.kicad_sch
hardware/cirradio-devboard/fab/: fab-notes.txt
hardware/cirradio-devboard/lib/: cirradio.kicad_sym
hardware/cirradio-devboard/lib/cirradio.pretty/: BGA-144_12x12_0.8mm.kicad_mod  BGA-153_11x14_0.5mm.kicad_mod  BGA-900_30x30_0.8mm.kicad_mod  BGA-96_9x14_0.8mm.kicad_mod  DIP-14_W7.62mm.kicad_mod  LCC-16_MAX-M10S.kicad_mod  LFCSP-16_3x3mm_P0.5mm.kicad_mod  LFCSP-24_4x4mm_P0.5mm.kicad_mod  Oscillator_SMD_4Pin_3.2x2.5mm.kicad_mod  QFN-16_3x3mm_P0.5mm.kicad_mod  QFN-32_5x5mm_P0.5mm.kicad_mod  QFN-48_7x7mm_P0.5mm.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOT-23-5.kicad_mod  TGA2594-SM.kicad_mod  WSON-8_2x2mm_P0.5mm.kicad_mod  WSON-8_6x5mm.kicad_mod
software/: CMakeLists.txt
software/cmake/: toolchain-zynq.cmake
software/embedded/: CMakeLists.txt
software/embedded/drivers/: axi_regs.cpp  axi_regs.hpp  gps_hal.cpp  gps_hal.hpp  iio_radio.cpp  iio_radio.hpp
software/embedded/hal/: zynq7045_hal.cpp  zynq7045_hal.hpp
software/src/: CMakeLists.txt  main.cpp
software/src/core/: Component.h  ComponentManager.cpp  ComponentManager.h  PropertyService.cpp  PropertyService.h
software/src/fhss/: HopSequencer.cpp  HopSequencer.h
software/src/hal/: IAudioHal.h  ICryptoHal.h  IGpsHal.h  IRadioHal.h  SimChannel.cpp  SimChannel.h  SimRadioHal.cpp  SimRadioHal.h  Types.h
software/src/mgmt/: CLIShell.cpp  CLIShell.h
software/src/network/: LinkState.h  MeshRouter.cpp  MeshRouter.h  Messages.h  NetJoin.cpp  NetJoin.h  PeerDiscovery.cpp  PeerDiscovery.h  RouteTable.cpp  RouteTable.h
software/src/node/: RadioNode.cpp  RadioNode.h
software/src/security/: CryptoEngine.cpp  CryptoEngine.h  EcSign.cpp  EcSign.h  IAxiRegs.h  IHsmEngine.h  KeyFillPort.cpp  KeyFillPort.h  KeyManager.cpp  KeyManager.h  Pkcs11Hsm.cpp  Pkcs11Hsm.h  SecurityManager.cpp  SecurityManager.h  SoftCryptoHal.cpp  SoftCryptoHal.h  SoftHsm.cpp  SoftHsm.h  TamperMonitor.cpp  TamperMonitor.h  ZeroizeEngine.cpp  ZeroizeEngine.h  pkcs11_types.h
software/src/tdma/: Frame.h  SlotScheduler.cpp  SlotScheduler.h
software/src/transec/: EmconManager.cpp  EmconManager.h  TransecConfig.cpp  TransecConfig.h
software/src/voice/: JitterBuffer.cpp  JitterBuffer.h  SimAudioHal.cpp  SimAudioHal.h  VoiceCodec.cpp  VoiceCodec.h
software/tests/: CMakeLists.txt  TransecTests.cpp  test_cli.cpp  test_crypto.cpp  test_hal_interfaces.cpp  test_hop_sequencer.cpp  test_integration_multinode.cpp  test_integration_voice.cpp  test_key_manager.cpp  test_keyfill.cpp  test_main.cpp  test_mesh_router.cpp  test_multinode_stress.cpp  test_net_join.cpp  test_pkcs11_hsm.cpp  test_radio_node.cpp  test_sca_core.cpp  test_sim_radio.cpp  test_tamper.cpp  test_tdma.cpp  test_voice.cpp  test_voice_quality.cpp
tools/board-test/: README.md  board_ssh.py  fhss_onair.py  flash_fpga.py  gps_lock.py  requirements.txt  rf_loopback.py  run_all.py  serial_console.py
